<resources>
    <string name="app_name">BookShare</string>
    <string name="add">ADD ITEM</string>
    <string name="card_text">CARD</string>
    <string name="avail">avail</string>
    <string name="unavail">taken</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="screen">Book Detail</string>
    <string name="owner">Owner</string>
    <string name="exit">Logout</string>
    <string name="login">LOGIN</string>

    <string name="menu_editview">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="title_activity_login">Login</string>
    <string name="title">Title</string>
    <string name="author">Author</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="features">Features</string>
    <string name="browse">Browse</string>
    <string name="my_bookshelf">My Bookshelf</string>
    <string name="add_book">Add Book</string>
    <string name="messages">Messages</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
</resources>
