<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/features">
        <menu>
            <item
                android:id="@+id/browse"
                android:title="@string/browse" />
            <item
                android:id="@+id/list_frag"
                android:title="@string/my_bookshelf" />
            <item
                android:id="@+id/item_frag"
                android:title="@string/add_book" />
            <item
                android:id="@+id/messages"
                android:title="@string/messages" />
            <item
                android:id="@+id/map"
                android:title="@string/map" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_exit"
                android:title="@string/exit" />
    </group>

</menu>
